--- a/memory_game/css/style.css
+++ b/memory_game/css/style.css
@@ -55,35 +55,35 @@ div {
 text-align: center;
 }
 nav { 
-	background-color: #00A6B3;
-	color: #FFFFFF;
-	padding: 20px;
+background-color: #00A6B3;	
+color: #FFFFFF;
+padding: 20px 0;
 }
 main {
-	width: 850px;
-	margin: 35px auto 35px auto;
+width: 850px;
+margin: 35px auto;
 }
 img {
-	margin-top: 40px;
-	margin-right: 8px;
-	margin-left: 8px;
+margin-top: 40px;
+margin-right: 8px;
+margin-left: 8px;
 
 }
 footer {
-	text-transform: uppercase;
-	padding-left: 20px;
-	padding-right: 20px;
-	background-color: #0D2C40;
-	font-size: 14px;
-	letter-spacing: .08em;
-	font-weight: 500;
+text-transform: uppercase;
+padding-left: 20px;
+padding-right: 20px;
+background-color: #0D2C40;
+font-size: 14px;
+letter-spacing: .08em;
+font-weight: 500;
 
 }
 .copyright {
-	float: left;
+float: left;
 }
 .message {
-	float: right;
+float: right;
 }
 .clearfix:after {
 visibility: hidden;
@@ -94,7 +94,7 @@ height: 0;
 font-size: 0;
 }
 .name { 
-	color: #F15B31;
-	font-weight: 700;
+color: #F15B31;
+font-weight: 700;
 
  }
